Fixed alignment of loader

--- a/src/survey/components/winning-song/winning-song.css
+++ b/src/survey/components/winning-song/winning-song.css
@@ -1,7 +1,9 @@
 
 .winning-song-page-wrapper {
-    position: absolute;
-    top: 25%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .winning-song-wrapper {
